Treinamento Discover HTML

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!--
     Teste de comentários.
 -->
-<h1>Teste</h1>
+<h1>
+    O título
+</h1>
+<!-- 
+    Elementontos Vazios
+-->
+<input type="text" alt="Teste">
+
+<img src="https://miro.medium.com/max/1200/1*fs0ScMc45X9QEwno8G414A.png" alt="Teste">
